// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart calcs 1`] = `
Object {
  "axis": Array [
    Array [
      0,
      2,
    ],
    Array [
      3.2,
    ],
  ],
  "bounds": Array [
    Array [
      0,
      2,
    ],
    Array [
      0.8,
      3.2,
    ],
  ],
  "dimensions": Array [
    2,
    2.4000000000000004,
  ],
  "pad": "large",
  "thickness": "xlarge",
}
`;

exports[`Chart cap renders 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-8 -8 272 144"
    width={256}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={16}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 256,128 L 256,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-8 -8 272 144"
    width={256}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={16}
    >
      <g
        fill="none"
      >
        <path
          d="M 256,0 L 0,128"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-8 -8 272 144"
    width={256}
  >
    <g
      fill="#20314f"
      stroke="#20314f"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={16}
    >
      <g>
        <path
          d="M 256,0 L 0,128 L 0,128 L 256,128 Z"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-8 -8 272 144"
    width={256}
  >
    <g
      fill="#20314f"
      stroke="none"
      strokeLinecap="round"
      strokeLinejoin="round"
    >
      <g
        stroke="none"
      >
        <title>
          sixty
        </title>
        <circle
          cx={256}
          cy={0}
          r={8}
        />
      </g>
      <g
        stroke="none"
      >
        <title>
          zero
        </title>
        <circle
          cx={0}
          cy={128}
          r={8}
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart color renders 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-8 -8 272 144"
    width={256}
  >
    <g
      fill="none"
      stroke="#E15151"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={16}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 256,128 L 256,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-8 -8 272 144"
    width={256}
  >
    <g
      fill="none"
      opacity={0.8}
      stroke="#E15151"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={16}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 256,128 L 256,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-8 -8 272 144"
    width={256}
  >
    <defs>
      <linearGradient
        id="undefined-gradient"
        x1={0}
        x2={0}
        y1={0}
        y2={1}
      >
        <stop
          offset={0}
          stopColor="rgba(0,0,0,0.33)"
        />
        <stop
          offset={1}
          stopColor="#E15151"
        />
      </linearGradient>
      <mask
        id="undefined-mask"
      >
        <g
          fill="none"
          stroke="#ffffff"
          strokeLinecap="butt"
          strokeLinejoin="miter"
          strokeWidth={16}
        >
          <g
            fill="none"
          >
            <title>
              sixty
            </title>
            <path
              d="M 256,128 L 256,0"
            />
          </g>
        </g>
      </mask>
    </defs>
    <rect
      fill="url(#undefined-gradient)"
      height={144}
      mask="url(#undefined-mask)"
      width={272}
      x={-8}
      y={-8}
    />
  </svg>
</div>
`;

exports[`Chart gap renders 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 512px;
}

.c2 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      height={128}
      preserveAspectRatio="none"
      viewBox="-8 -8 56 144"
      width={40}
    >
      <g
        fill="none"
        stroke="#20314f"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={16}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 40,128 L 40,0"
          />
        </g>
      </g>
    </svg>
    <svg
      className="c2"
      height={128}
      preserveAspectRatio="none"
      viewBox="-8 -8 64 144"
      width={48}
    >
      <g
        fill="none"
        stroke="#20314f"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={16}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 48,128 L 48,0"
          />
        </g>
      </g>
    </svg>
    <svg
      className="c2"
      height={128}
      preserveAspectRatio="none"
      viewBox="-8 -8 80 144"
      width={64}
    >
      <g
        fill="none"
        stroke="#20314f"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={16}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 64,128 L 64,0"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Chart renders 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-8 -8 272 144"
    width={256}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={16}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 256,128 L 256,0"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart size renders 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 512px;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={64}
    preserveAspectRatio="none"
    viewBox="-8 -8 80 80"
    width={64}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={16}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 64,64 L 64,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-8 -8 144 144"
    width={128}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={16}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 128,128 L 128,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={256}
    preserveAspectRatio="none"
    viewBox="-8 -8 272 272"
    width={256}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={16}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 256,256 L 256,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={512}
    preserveAspectRatio="none"
    viewBox="-8 -8 528 528"
    width={512}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={16}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 512,512 L 512,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={768}
    preserveAspectRatio="none"
    viewBox="-8 -8 784 784"
    width={768}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={16}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 768,768 L 768,0"
        />
      </g>
    </g>
  </svg>
  <div
    className="c2"
  >
    <svg
      className="c1"
      height={128}
      preserveAspectRatio="none"
      viewBox="-8 -8 16 144"
      width={0}
    >
      <g
        fill="none"
        stroke="#20314f"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={16}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 0,128 L 0,0"
          />
        </g>
      </g>
    </svg>
    <svg
      className="c1"
      height={128}
      preserveAspectRatio="none"
      viewBox="-8 -8 64 144"
      width={48}
    >
      <g
        fill="none"
        stroke="#20314f"
        strokeLinecap="butt"
        strokeLinejoin="miter"
        strokeWidth={16}
      >
        <g
          fill="none"
        >
          <title>
            sixty
          </title>
          <path
            d="M 48,128 L 48,0"
          />
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Chart thickness renders 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-2 -2 260 132"
    width={256}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={4}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 256,128 L 256,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-4 -4 264 136"
    width={256}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={8}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 256,128 L 256,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-8 -8 272 144"
    width={256}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={16}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 256,128 L 256,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-16 -16 288 160"
    width={256}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={32}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 256,128 L 256,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-32 -32 320 192"
    width={256}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={64}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 256,128 L 256,0"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Chart type renders 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: block;
  max-width: 100%;
  overflow: visible;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-8 -8 272 144"
    width={256}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={16}
    >
      <g
        fill="none"
      >
        <title>
          sixty
        </title>
        <path
          d="M 256,128 L 256,0"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-8 -8 272 144"
    width={256}
  >
    <g
      fill="none"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={16}
    >
      <g
        fill="none"
      >
        <path
          d="M 256,0 L 0,128"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-8 -8 272 144"
    width={256}
  >
    <g
      fill="#20314f"
      stroke="#20314f"
      strokeLinecap="butt"
      strokeLinejoin="miter"
      strokeWidth={16}
    >
      <g>
        <path
          d="M 256,0 L 0,128 L 0,128 L 256,128 Z"
        />
      </g>
    </g>
  </svg>
  <svg
    className="c1"
    height={128}
    preserveAspectRatio="none"
    viewBox="-8 -8 272 144"
    width={256}
  >
    <g
      fill="#20314f"
      stroke="none"
      strokeLinecap="butt"
      strokeLinejoin="miter"
    >
      <g
        stroke="none"
      >
        <title>
          sixty
        </title>
        <rect
          height={16}
          width={16}
          x={248}
          y={-8}
        />
      </g>
      <g
        stroke="none"
      >
        <title>
          zero
        </title>
        <rect
          height={16}
          width={16}
          x={-8}
          y={120}
        />
      </g>
    </g>
  </svg>
</div>
`;
